Fixed JS + fixed alignment removeClass

--- a/css/editor.css
+++ b/css/editor.css
@@ -556,6 +556,8 @@ body#tinymce.wp-editor {
     margin: 10px 0 20px;
     table-layout: fixed;
     width: 100%; }
+    body#tinymce.wp-editor .pbsandwich_column > tbody > tr > td {
+      min-width: 150px; }
   body#tinymce.wp-editor .pbsandwich_column.pbs-align-left {
     width: auto !important;
     margin-right: auto !important;
@@ -568,8 +570,8 @@ body#tinymce.wp-editor {
     width: auto !important;
     margin-right: auto !important;
     margin-left: auto !important; }
-  body#tinymce.wp-editor .pbsandwich_column td {
-    min-width: 150px; }
+  body#tinymce.wp-editor .pbsandwich_column.pbs-align-left > tbody > tr > td, body#tinymce.wp-editor .pbsandwich_column.pbs-align-right > tbody > tr > td, body#tinymce.wp-editor .pbsandwich_column.pbs-align-center > tbody > tr > td {
+    width: auto !important; }
   body#tinymce.wp-editor .pbsandwich_column[data-mce-selected="1"] ~ .mce-resizehandle, body#tinymce.wp-editor.pbsandwich_column_selected .mce-resizehandle {
     display: none !important; }
   body#tinymce.wp-editor .pbsandwich_column td:hover,
